objects/CameleonCPQ__QxQuote__c.object
<CustomObject>
    <fields>
        <fullName>CheckBox_Follower_relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox_Follower_relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Forced_inheritance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox_Forced_inheritance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Furniture_Delivery_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox_Furniture_Delivery_Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Is_Desktop_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox_Is_Desktop_Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Less_Inherited_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox_Less_Inherited_Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_MFN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox_MFN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Minimum_Order_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox_Minimum_Order_Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_More_Inherited_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox_More_Inherited_Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Nb_allowed_on_the_core__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox_Nb_allowed_on_the_core</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_No_custom_inherited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox_No_custom_inherited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Non_standard_callout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox_Non_standard_callout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Out_Clause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox_Out_Clause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Payment_Term_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox_Payment_Term_Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Renewal_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox_Renewal_Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Small_Order_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox_Small_Order_Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clone_Of_Quote_Number__c</fullName>
        <formula>Clone_Parent__r.Quote_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clone Of Quote ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clone_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clone Parent</label>
        <referenceTo>CameleonCPQ__QxQuote__c</referenceTo>
        <relationshipLabel>Clone Children</relationshipLabel>
        <relationshipName>PROS_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clone_Quote_Name__c</fullName>
        <label>Clone Quote Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed_Revenue__c</fullName>
        <label>Committed Revenue</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Compliance_Approval_Is_Received__c</fullName>
        <formula>if(text(Compliance_Approval_Status__c)==&apos;Approved&apos;, true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliance Approval Is Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Approval_Rejection_Comments__c</fullName>
        <label>Compliance Post Customer Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compliance_Approval_Status__c</fullName>
        <label>Compliance Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compliance_Approved_Rejected_By__c</fullName>
        <label>Compliance Approved/Rejected By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_DOA_Rejection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance DOA Rejection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Pre_Approval_Comments__c</fullName>
        <label>Compliance Pre Customer Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compliance_Rejection_date__c</fullName>
        <label>Compliance Approval/Rejection date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing Compliance Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Term_Refresh_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Term Refresh Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contribution_Margin__c</fullName>
        <label>Contribution Margin</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Core_Communication_Trigger__c</fullName>
        <description>any combination of 2 or more 

- Customer_communication_requirements__c (Value=&quot;Notification only&quot;) OR
- DOA_Custom_Price_Increase_Flag__c (Value = true) OR
- DOA_Custom_Price_More_Inherited_Flag__c (Value = true) OR
- DOA_Price_Freeze_Violation__c</description>
        <formula>IF(
OR( ISPICKVAL(Customer_communication_requirements__c, &apos;Notification&apos;) ,DOA_Price_Freeze_Violation__c,DOA_Custom_Price_Increase_Flag__c,DOA_Custom_Price_More_Inherited_Flag__c), 

IF(OR(AND(ISPICKVAL(Customer_communication_requirements__c, &apos;Notification&apos;),OR(DOA_Price_Freeze_Violation__c,DOA_Custom_Price_Increase_Flag__c,DOA_Custom_Price_More_Inherited_Flag__c)),AND(DOA_Custom_Price_More_Inherited_Flag__c,OR(ISPICKVAL(Customer_communication_requirements__c, &apos;Notification&apos;) ,DOA_Price_Freeze_Violation__c,DOA_Custom_Price_Increase_Flag__c)),AND(DOA_Custom_Price_Increase_Flag__c,OR(ISPICKVAL(Customer_communication_requirements__c, &apos;Notification&apos;) ,DOA_Price_Freeze_Violation__c,DOA_Custom_Price_More_Inherited_Flag__c)),AND(DOA_Price_Freeze_Violation__c,OR(ISPICKVAL(Customer_communication_requirements__c, &apos;Notification&apos;) ,DOA_Custom_Price_Increase_Flag__c,DOA_Custom_Price_More_Inherited_Flag__c))),true,false)

,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Core Communication Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Duplicate__c</fullName>
        <label>Core Duplicate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Core_IGM_Perc__c</fullName>
        <label>Core IGM %</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Core_Id__c</fullName>
        <label>Core Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Name__c</fullName>
        <defaultValue>&quot;New Core Name&quot;</defaultValue>
        <label>Core Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Basis_Other__c</fullName>
        <label>Cost Basis - Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Basis__c</fullName>
        <label>Core Cost Basis</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_of_Credit_Payment_terms__c</fullName>
        <label>Cost of Credit $ (Payment terms)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Count_Line_For_Customer_Copy__c</fullName>
        <label>Count_Line_For_Customer_Copy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Customer__c</fullName>
        <formula>IF(Hist_Total_Contract_Sales_Gross__c &gt;0,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Core_Id__c</fullName>
        <description>Generating custom core Id</description>
        <label>Custom Core Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Core_Item_Count_Approved__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Custom_Core_Item_Count_Approved</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Core_Item_Count_Lower_Bracket_1__c</fullName>
        <label>Custom Core Item Count Lower Bracket 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Core_Item_Count_Tier_1__c</fullName>
        <label>Custom Core Item Count Tier 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Core_Item_Count_Tier_2__c</fullName>
        <label>Custom Core Item Count Tier 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Core_Item_Count_Tier_3__c</fullName>
        <label>Custom Core Item Count Tier 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Core_Item_Count_Upper_Bracket_1__c</fullName>
        <label>Custom Core Item Count Upper Bracket 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Core_Item_Count_Upper_Bracket_2__c</fullName>
        <label>Custom Core Item Count Upper Bracket 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Core_Item_Count_Upper_Bracket_3__c</fullName>
        <label>Custom Core Item Count Upper Bracket  3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerApproverRepMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Approver  Rep Mail</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PROS_Quotes1a</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerType__c</fullName>
        <formula>IF (Current_Customer__c = TRUE , &quot;Exist&quot;,&quot;New&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Approval_1st_reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Approval 1st reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Approval_2nd_reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Approval 2nd reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Approval_Received_Date__c</fullName>
        <label>Customer Approval Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Approval_Status__c</fullName>
        <label>Customer Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Requested to be Contacted</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approval Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Approval_is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Approval is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_AutoApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer AutoApproval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Doc_ID__c</fullName>
        <label>Customer Doc ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <formula>CameleonCPQ__AccountId__r.AOPS_Cust_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Rejection_date__c</fullName>
        <label>Customer Rejection date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Response__c</fullName>
        <label>Customer Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_approval_is_received__c</fullName>
        <label>Customer notification/approval received</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Auto Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_communication_requirements__c</fullName>
        <label>Customer communication requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Notification</fullName>
                </value>
                <value>
                    <fullName>Notification &amp; Approval</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_email__c</fullName>
        <label>Customer email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DML_Id__c</fullName>
        <formula>DML_Relationship__r.DML_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DML Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DML Relationship</label>
        <referenceTo>DML_Relation__c</referenceTo>
        <relationshipLabel>PROS Quotes</relationshipLabel>
        <relationshipName>PROS_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOA_Appoval__c</fullName>
        <formula>if(AND(ISPICKVAL(DOA_Approval_Status__c, &apos;Approved&apos; ),NOT(ISBLANK(Core_Id__c))) , true , false)</formula>
        <label>DOA Appoval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOA_Approval_Rejection_Date__c</fullName>
        <label>DOA Approval/Rejection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOA_Approval_Status__c</fullName>
        <label>DOA Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approval Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOA_Approver_L1__c</fullName>
        <inlineHelpText>DOA_Approver_L1</inlineHelpText>
        <label>DOA Approver L1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOA_Approver_L2__c</fullName>
        <inlineHelpText>DOA_Approver_L2</inlineHelpText>
        <label>DOA Approver L2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOA_Approver_L3__c</fullName>
        <inlineHelpText>DOA_Approver_L3</inlineHelpText>
        <label>DOA Approver L3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOA_CPC_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>DOA_CPC_Update</inlineHelpText>
        <label>DOA_CPC_Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOA_Custom_Price_Decrease_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>DOA_Custom_Price_Decrease_Flag</inlineHelpText>
        <label>Any Custom Price Decrease on Inherited C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOA_Custom_Price_Increase_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>DOA_Custom_Price_Increase_Flag</inlineHelpText>
        <label>Any Custom Price Increase on Inherited C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOA_Custom_Price_Less_Inherited_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>DOA_Custom_Price_Less_Inherited_Flag</inlineHelpText>
        <label>Any Custom Price Less Then Inherited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOA_Custom_Price_More_Inherited_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>DOA_Custom_Price_More_Inherited_Flag</inlineHelpText>
        <label>Any Custom Price More Then Inherited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOA_Forced_Inheritance_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>DOA_Forced_Inheritance_Flag</inlineHelpText>
        <label>Forced_Inheritance_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOA_Item_Count_Violation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>DOA_Item_Count_Violation</inlineHelpText>
        <label>Item Count Violation Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOA_No_custo_on_inherited_core_sku__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>DOA_No_custo_on_inherited_core_sku</inlineHelpText>
        <label>DOA_No_custo_on_inherited_core_sku</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOA_Price_Freeze_Violation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>DOA_Price_Freeze_Violation</inlineHelpText>
        <label>Price Freeze Violation Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOA_Program_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DOA Program Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOA_SKU_Below_Floor_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>DOA_SKU_Below_Floor_Flag</inlineHelpText>
        <label>Any Sku Below Floor Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOA_Vendor_letter_required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>DOA_Vendor_letter_required</inlineHelpText>
        <label>Vendor Letter Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_ReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate ReadOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To deactivate validation rules</description>
        <label>Deactivate Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decrease_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decrease Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Account_Id__c</fullName>
        <formula>Default_Account__r.AOPS_Cust_ID_Trunc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inheritance Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Account_Level__c</fullName>
        <formula>/*IF( OR(Default_Account__r.RecordType.DeveloperName = &quot;Customer&quot; ,Default_Account__r.RecordType.DeveloperName = &quot;Prospect&quot; ) , &quot;C&quot;,  IF(Default_Account__r.RecordType.DeveloperName = &quot;Parent&quot; , &quot;P&quot;, IF( Default_Account__r.RecordType.DeveloperName = &quot;Grandparent&quot; , &quot;GP&quot;, IF( Default_Account__r.RecordType.DeveloperName = &quot;Great_Grandparent&quot; , &quot;GGP&quot;, &quot;C&quot;)) ) )*/ IF(ISBLANK(Default_Account__r.Hierarchy__c), &apos;C&apos;, Default_Account__r.Hierarchy__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inheritance Account Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Account_Name__c</fullName>
        <formula>Default_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inheritance Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inheritance Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PROS Quotes (Default Account)</relationshipLabel>
        <relationshipName>PROS_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Grandparent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inheritance Grandparent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Hierarchy__c</field>
                <operation>equals</operation>
                <value>GP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PROS Quotes (Default Grandparent)</relationshipLabel>
        <relationshipName>PROS_Quotes_Def_GP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Great_Grandparent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inheritance Great Grandparent</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.Hierarchy__c</field>
                <operation>equals</operation>
                <value>GG</value>
            </filterItems>
            <filterItems>
                <field>Account.Hierarchy__c</field>
                <operation>equals</operation>
                <value>GGP</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PROS Quotes (Inheritance Great Grandparent)</relationshipLabel>
        <relationshipName>Inheritance_GGC_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inheritance Parent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Hierarchy__c</field>
                <operation>equals</operation>
                <value>P</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PROS Quotes (Default Parent)</relationshipLabel>
        <relationshipName>PROS_Quotes_Def_P</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deletion_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deletion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <label>Delivery Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denial_Recipient__c</fullName>
        <formula>Sales_Rep__r.Full_Name__c  &amp;  IF(ISBLANK(PricingAnalyst__c), &quot;,&quot;, &quot; and &quot; &amp; PricingAnalyst__r.Full_Name__c  &amp; &quot;,&quot;)</formula>
        <label>Denial Recipient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desktop_Delivery__c</fullName>
        <label>Desktop Delivery $</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Desktop_Delivery_as_a_of_orders__c</fullName>
        <label>Desktop Delivery (as a % of orders)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deviation_Funds__c</fullName>
        <label>Deviation Funds $</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distribution__c</fullName>
        <label>Distribution</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Document_Downloadable_URL__c</fullName>
        <label>Document Downloadable URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Documentation_required_to_participate__c</fullName>
        <label>Documentation required to participate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No requirement</fullName>
                </value>
                <value>
                    <fullName>Signed documentation</fullName>
                </value>
                <value>
                    <fullName>Written confirmation</fullName>
                </value>
                <value>
                    <fullName>Member enrollment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EVP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PROS_Quotes9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Existing_Agreement_Term__c</fullName>
        <label>Agreement Terms</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_CC_Item_Count_Lower_Bracket_1__c</fullName>
        <label>Existing_CC_Item_Count_Lower_Bracket_1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_CC_Item_Count_Tier_1__c</fullName>
        <label>Existing_CC_Item_Count_Tier_1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_CC_Item_Count_Tier_2__c</fullName>
        <label>Existing_CC_Item_Count_Tier_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_CC_Item_Count_Tier_3__c</fullName>
        <label>Existing_CC_Item_Count_Tier_3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_CC_Item_Count_Upper_Bracket_1__c</fullName>
        <label>Existing_CC_Item_Count_Upper_Bracket_1</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_CC_Item_Count_Upper_Bracket_2__c</fullName>
        <label>Existing_CC_Item_Count_Upper_Bracket_2</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_CC_Item_Count_Upper_Bracket_3__c</fullName>
        <label>Existing_CC_Item_Count_Upper_Bracket_3</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_Committed_Revenue__c</fullName>
        <label>Committed Revenue</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_Cost_Basis_Other__c</fullName>
        <label>Cost Basis Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Existing_Cost_Basis__c</fullName>
        <label>Cost Basis</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Customer_com_requirements__c</fullName>
        <label>Existing_Customer_com_requirements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Doc_required_to_participate__c</fullName>
        <label>Existing_Doc_required_to_participate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Follower_relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing_Follower_relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Forced_inheritance_no_custom_co__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forced Inheritance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Furniture_Delivery_Fee__c</fullName>
        <label>Furniture Delivery Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Is_Desktop_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Desktop Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Less_Inherited_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing_Less_Inherited_Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_MFN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing_MFN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Minimum_Order_Fee__c</fullName>
        <label>Minimum Order Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_More_Inherited_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing_More_Inherited_Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Nb_allowed_on_the_core__c</fullName>
        <label>Existing_Nb_allowed_on_the_core</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>